[gd_scene load_steps=27 format=3 uid="uid://druc2kcco83t6"]

[ext_resource type="PackedScene" uid="uid://c2socoyh5hixd" path="res://Resources/3D Blender Assets/Unimported/Armature.glb" id="1_i28el"]
[ext_resource type="Script" path="res://Scripts/Player/3rd Person Character.gd" id="2_b4boq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s1p6n"]
height = 1.86141

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_md37o"]
animation = &"Falling "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n56mf"]
animation = &"Idle "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_27k43"]
animation = &"Jumping"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m8fuy"]
animation = &"Sprinting "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gqxdd"]
animation = &"Walking "

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_chhhi"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ty55"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wjpj1"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v6mb5"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"falling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mgfkm"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s6n83"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"falling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gp5j8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4y655"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kelqo"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7yhq5"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"sprinting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tia8j"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2364y"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tfp66"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"sprinting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t84u8"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2vald"]
xfade_time = 0.2
switch_mode = 1
advance_mode = 2
advance_condition = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ehc6g"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ehhna"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"falling"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dymn6"]
states/End/position = Vector2(732.667, 94)
states/Falling/node = SubResource("AnimationNodeAnimation_md37o")
states/Falling/position = Vector2(502.305, 118)
states/Idle/node = SubResource("AnimationNodeAnimation_n56mf")
states/Idle/position = Vector2(27.333, 105.234)
states/Jumping/node = SubResource("AnimationNodeAnimation_27k43")
states/Jumping/position = Vector2(502.148, 36.6663)
states/Sprinting/node = SubResource("AnimationNodeAnimation_m8fuy")
states/Sprinting/position = Vector2(289.334, 190.667)
states/Start/position = Vector2(-215.333, 164.472)
states/Walking/node = SubResource("AnimationNodeAnimation_gqxdd")
states/Walking/position = Vector2(125.999, 3.33333)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_chhhi"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_4ty55"), "Idle", "Jumping", SubResource("AnimationNodeStateMachineTransition_wjpj1"), "Idle", "Falling", SubResource("AnimationNodeStateMachineTransition_v6mb5"), "Walking", "Jumping", SubResource("AnimationNodeStateMachineTransition_mgfkm"), "Walking", "Falling", SubResource("AnimationNodeStateMachineTransition_s6n83"), "Jumping", "Falling", SubResource("AnimationNodeStateMachineTransition_gp5j8"), "Falling", "Idle", SubResource("AnimationNodeStateMachineTransition_4y655"), "Falling", "Walking", SubResource("AnimationNodeStateMachineTransition_kelqo"), "Idle", "Sprinting", SubResource("AnimationNodeStateMachineTransition_7yhq5"), "Jumping", "Idle", SubResource("AnimationNodeStateMachineTransition_tia8j"), "Sprinting", "Idle", SubResource("AnimationNodeStateMachineTransition_2364y"), "Walking", "Sprinting", SubResource("AnimationNodeStateMachineTransition_tfp66"), "Sprinting", "Walking", SubResource("AnimationNodeStateMachineTransition_t84u8"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_2vald"), "Sprinting", "Jumping", SubResource("AnimationNodeStateMachineTransition_ehc6g"), "Sprinting", "Falling", SubResource("AnimationNodeStateMachineTransition_ehhna")]
graph_offset = Vector2(-396, -28)

[node name="Armature" instance=ExtResource("1_i28el")]
script = ExtResource("2_b4boq")

[node name="Armature2" parent="." index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.9, 0)

[node name="Skeleton3D" parent="Armature2" index="0"]
bones/0/position = Vector3(-1.99527e-10, -0.00614113, -0.0166427)
bones/2/rotation = Quaternion(0.0425501, 0.00241668, 0.00339728, 0.999086)
bones/3/rotation = Quaternion(0.0445163, 0.0115178, 0.00713302, 0.998917)
bones/4/rotation = Quaternion(-0.0323155, 0.024314, -0.709894, 0.703146)
bones/5/rotation = Quaternion(-0.0604946, 0.10422, -0.540724, 0.832524)
bones/6/rotation = Quaternion(0.291165, 0.0156791, -0.173317, 0.940712)
bones/7/rotation = Quaternion(-0.0566302, -0.00158694, -0.206691, 0.976765)
bones/8/rotation = Quaternion(-0.0281204, -0.00862133, 0.71588, 0.697603)
bones/9/rotation = Quaternion(-0.151098, -0.0308888, 0.564375, 0.810985)
bones/10/rotation = Quaternion(0.252371, -0.011281, 0.0970031, 0.96269)
bones/11/rotation = Quaternion(-0.0550965, -0.0313194, 0.214792, 0.974601)
bones/12/rotation = Quaternion(0.0243435, 0.113555, 0.990956, -0.0672273)
bones/12/scale = Vector3(0.999991, 1, 0.999984)
bones/13/rotation = Quaternion(-0.12793, 0.0261939, -0.0484458, 0.990253)
bones/14/rotation = Quaternion(0.72919, -0.0123828, -0.0137062, 0.684062)
bones/15/rotation = Quaternion(-0.0219199, 0.117509, 0.992374, 0.0300775)
bones/15/scale = Vector3(0.999991, 1, 0.999984)
bones/16/rotation = Quaternion(-0.135031, -0.0133325, -0.0219183, 0.990509)
bones/17/rotation = Quaternion(0.730774, 0.025552, 0.0457235, 0.680607)

[node name="Dude With Bones" parent="Armature2/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0225146, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.935655, 0)
shape = SubResource("CapsuleShape3D_s1p6n")

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource("AnimationNodeStateMachine_dymn6")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/conditions/falling = false
parameters/conditions/idle = false
parameters/conditions/is_on_floor = false
parameters/conditions/jumping = false
parameters/conditions/sprinting = false
parameters/conditions/walking = false

[node name="camera_center" type="Node3D" parent="." index="4"]

[node name="camera_point" type="Node3D" parent="camera_center" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 6.34808, 6.53109)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="5"]
target_desired_distance = 0.5
